--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "firebase": "^8.4.2",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "reselect": "^4.0.0"
   }
 }
